crates/atlas-runtime/tests/snapshots/lexer_golden_modern__lexer_error_single_ampersand.snap
---
source: crates/atlas-runtime/tests/lexer_golden_modern.rs
expression: diagnostics
---
- diag_version: 1
  level: error
  code: AT1001
  message: "Unexpected character '&', did you mean '&&'?"
  file: "<unknown>"
  line: 2
  column: 56
  length: 1
  snippet: "if (x & y) {"
  label: lexer error
